--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3</title>
-  <script type="module" crossorigin src="/assets/index.a4520d89.js"></script>
+    <title>My portofolio</title>
+  <script type="module" crossorigin src="/assets/index.e5b192c8.js"></script>
   <link rel="stylesheet" href="/assets/index.50b0498d.css">
 </head>
 
